# vertex-ai-mlops

./: .gitignore  00 - Environment Setup.ipynb  00 - Initial Setup.ipynb  01 - BigQuery - Data.ipynb  01 - BigQuery - Table Data Source.ipynb  02 - BigQuery - BQML.ipynb  02 BigQuery - BQML.ipynb  02A -Vertex AI - AutoML in Console (no code).ipynb  02a - Vertex AI - AutoML in GCP Console (no code).ipynb  02a -Vertex AI - AutoML in Console (no code).ipynb  02b - Vertex AI - AutoML with Clients (code).ipynb  02b - Vertex AI - AutoML with clients (code).ipynb  02c - Vertex AI > Pipelines - AutoML with clients (code) In automated pipeline.ipynb  03 - BigQuery - BQML - Export and Serving.ipynb  03 - BigQuery - BQML Online Predictions.ipynb  03a - BigQuery Machine Learning (BQML) - Machine Learning with SQL.ipynb  03b - Vertex AI + BQML - Online Predictions with BQML Models.ipynb  03c - BQML + Vertex AI > Pipelines - automated pipelines for updating models.ipynb  04 - AI Platform - External Model Serving.ipynb  04 - AI Platform - Notebook (BQ data, train, save, deploy, serve).ipynb  04 - BigQuery - TF Train + Save + Serve.ipynb  04 - Time Series Forecasting - Data Review in BigQuery.ipynb  04 - Vertex AI - External Model Serving.ipynb  04a - BigQuery Machine Learning (BQML) - Univariate Forecasting with ARIMA+.ipynb  04a - Vertex AI > Model Monitoring.ipynb  04a - Vertex AI > Notebooks - Models Built in Notebooks with Tensorflow.ipynb  04b - Vertex AI - AutoML for Global Forecasting with Deep Learning - In GCP Console (no code).ipynb  04c - Vertex AI - AutoML for Global Forecasting with Deep Learning - with Python client (code).ipynb  04d - Vertex AI - AutoML for Global Forecasting with Deep Learning - multiple parallel scenarios.ipynb  04e - Vertex AI > Notebooks - Forecasting with Prophet (Python).ipynb  04f - Vertex AI > Training > Custom Jobs - Forecasting with Prophet using Custom Container.ipynb  04g - Vertex AI > Pipelines - Forecasting Tournament with Kubeflow (KFP) and BQML + AutoML + Prophet.ipynb  05 - AI Platform - Training Job and Serving.ipynb  05 - Vertex AI - Experiments - Tensorboard Instance.ipynb  05 - Vertex AI - Training Job and Serving.ipynb  05 - Vertex AI > Experiments - Managed Tensorboard.ipynb  05 - Vertex AI > Notebooks - Models Built in Notebooks with Tensorflow.ipynb  05_train_hp.py  05a - Vertex AI - Tensorboard.ipynb  05a - Vertex AI - Training - Custom Job - from Python File.ipynb  (+53 more)
Applied GenAI/Embeddings/: BQML Autoencoder As Table Embedding.ipynb  Bring Embeddings to Life With Visualization Techniques.ipynb  Embeddings API.ipynb  Example Embeddings - Document To Chunks With Embeddings.ipynb  The Math of Cross-Modal Similarity.ipynb  The Math of Embeddings.ipynb  The Math of Similarity.ipynb  Vertex AI Multimodal Embeddings.ipynb  Vertex AI Text Embeddings API.ipynb  pyproject.toml  readme.md
Framework Workflows/PyTorch/: pyproject.toml  pytorch-autoencoder.ipynb  readme.md  requirements-brief.txt  requirements-colab.txt  requirements.txt
Framework Workflows/R/: .gcloudignore  .gitignore  Dockerfile  R - Dataproc Serverless Spark-R.ipynb  R - Notebook Workflow.ipynb  R - Reading BigQuery Iceberg Tables.ipynb  R - Serving Predictions.ipynb  R - Vertex AI Custom Training Job.ipynb  R - Vertex AI Pipelines.ipynb  R on Vertex AI Pipelines.ipynb  plumber.R  pyproject.toml  r-baked.yaml  r-both.yaml  r-injected.yaml  readme.md  serve.R
MLOps/: Vertex AI Experiments.ipynb  Vertex AI Pipelines - Components.ipynb  Vertex AI Pipelines - Control.ipynb  Vertex AI Pipelines - IO.ipynb  Vertex AI Pipelines - Introduction.ipynb  Vertex AI Pipelines - Management.ipynb  Vertex AI Pipelines - Notifications.ipynb  Vertex AI Pipelines - Pattern - Modular and Reusable.ipynb  Vertex AI Pipelines - Scheduling.ipynb  Vertex AI Pipelines - Secret Manager.ipynb  pyproject.toml  readme.md  requirements.txt
MLOps/.resources/: graphics.ipynb  readme.md
MLOps/Development Environments/: readme.md
MLOps/Experiment Tracking/: Vertex AI Experiments.ipynb  readme.md
MLOps/Feature Store/: .gitignore  Feature Focused Data Architecture.ipynb  Feature Store (Legacy).ipynb  Feature Store - Embeddings.ipynb  Feature Store Overview.html  Feature Store Overview.md  Feature Store.ipynb  feature-store-data-sources.ipynb  fs-data-shapes.py  fs-data-types.py  fs-feature-retrieval.ipynb  readme.md  test.py
MLOps/Model Evaluation/: model-evaluation-classificaiton-binary.ipynb  model-evaluation-classification-binary.ipynb  model-evaluation-classification-multi-class.ipynb  model-evaluation-classification-multi-label.ipynb  readme.md
MLOps/Model Monitoring/: bqml-model-monitoring-introduction.ipynb  bqml-model-monitoring-tutorial.ipynb  model_monitoring_job.sql  readme.md  test.ipynb
MLOps/Pipelines/: R on Vertex AI Pipelines.ipynb  Vertex AI Pipelines - Components.ipynb  Vertex AI Pipelines - Control.ipynb  Vertex AI Pipelines - GCS Read and Write.ipynb  Vertex AI Pipelines - IO.ipynb  Vertex AI Pipelines - Introduction.ipynb  Vertex AI Pipelines - Management.ipynb  Vertex AI Pipelines - Managing Pipeline Jobs.ipynb  Vertex AI Pipelines - Notifications.ipynb  Vertex AI Pipelines - Pattern - Modular and Reusable.ipynb  Vertex AI Pipelines - Scheduling.ipynb  Vertex AI Pipelines - Secret Manager.ipynb  Vertex AI Pipelines - Start Here.ipynb  Vertex AI Pipelines - Testing.ipynb  readme.md
MLOps/Serving/: Online Serving With NVIDIA Triton Server.ipynb  PLANS.md  Serve TensorFlow SavedModel Format With BigQuery.ipynb  Serving Models With Cloud Functions.ipynb  Serving Models on Cloud Run.ipynb  Serving Models on GKE.ipynb  Understanding Prediction IO With FastAPI.ipynb  Vertex AI Dedicated Public Endpoint.ipynb  Vertex AI Endpoint - Autoscaling.ipynb  Vertex AI Endpoint - Prediction Methods.ipynb  Vertex AI PSC Endpoint - Pipeline Model Swap.ipynb  Vertex AI Pre-built Serving Containers.ipynb  notes.ipynb  readme.md  (+3 more)
core/: pyproject.toml  python_setup.ipynb  python_setup.py  python_setup_local.py  requirements-brief.txt  requirements-colab.txt  requirements.txt  template-pyproject.toml
(+2822 files in other folders)
