[project]
name = "mlops-serving"
version = "0.1.0"
description = "Model serving example notebooks for Vertex AI"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform",
    "google-cloud-storage",
    "google-cloud-bigquery",
    "db-dtypes",
    "google-cloud-artifact-registry",
    "google-cloud-build",
    "google-cloud-run",
    "transformers",
    "torch",
    "sentencepiece",
    "tensorflow",
    "docker",
    "numpy",
    "pandas",
    "kfp",
    "google-cloud-pipeline-components",
    "apache-beam[gcp]",
    "google-cloud-dataproc",
    "grpcio",
    "httpx",
    "aiohttp",
    "google-cloud-monitoring",
    "google-cloud-orchestration-airflow",
    "matplotlib",
    "google-cloud-bigquery-connection",
    "google-cloud-alloydb",
    "google-cloud-alloydb-connector[pg8000]",
    "pg8000",
    "google-cloud-spanner",
    "sqlalchemy-spanner",
    "google-cloud-container",
    "kubernetes",
    "google-cloud-functions",
    "onnx",
    "onnxruntime",
    "onnxscript",
    "torch-model-archiver",
    "tritonclient[all]",
    "vllm",
    "openai",
    "huggingface_hub",
    "Pillow",
    "pydantic",
    "ipywidgets",
    "pip",
    "ipykernel",
]
