[tool.poetry]
name = "headers"
description = "Tools for adding headers to notebooks and markdown files."
authors = ["Mike Henderson <statmike@gmail.com>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = ">=6.30.1,<7.0.0"
nbformat = ">=5.10.4,<6.0.0"

