[project]
name = "headers"
description = "Tools for adding headers to notebooks and markdown files."
authors = [{name = "Mike Henderson", email = "statmike@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1,<7.0.0",
    "nbformat>=5.10.4,<6.0.0",
]

[tool.uv]
package = false

#FUTURE
#[dependency-groups]
#dev = ["ruff", "mypy", "pytest"]
