[tool.poetry]
name = "concept-bq"
description = "An ADK example that shows multiple ways of having agents directly query BigQuery"
authors = ["Mike Henderson <statmike@gmail.com>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-bigquery = ">=3.36.0,<4.0.0"
google-adk = {extras = ["eval"], version = ">=1.12.0,<2.0.0"}
toolbox-core = ">=0.5.0,<0.6.0"
pandas = ">=2.3.2,<3.0.0"
db-dtypes = ">=1.4.3,<2.0.0"
tabulate =  ">=0.9.0,<0.10.0"
python-dotenv = ">=1.0.0,<2.0.0"

