[tool.poetry]
name = "concept-bq"
description = "An ADK example that shows multiple ways of having agents directly query BigQuery"
authors = ["Mike Henderson <statmike@gmail.com>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14.0"
google-cloud-bigquery = ">=3.36.0,<4.0.0"
google-adk = "^1.14.0"
toolbox-core = ">=0.5.0,<0.6.0"
pandas = ">=2.3.2,<3.0.0"
db-dtypes = ">=1.4.3,<2.0.0"
tabulate =  ">=0.9.0,<0.10.0"
python-dotenv = ">=1.0.0,<2.0.0"
google-cloud-geminidataanalytics = "^0.3.0"
altair = "^5.5.0"
vl-convert-python = "^1.8.0"
ipykernel = "^7.0.1"








[tool.poetry.group.dev]
optional = true
# use poetry install --with dev to include these:

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1" 

[tool.taskipy.tasks.req_full]
cmd = "poetry export -f requirements.txt --output requirements.txt --without-hashes"
help = "Generates full requirements.txt (from poetry.lock)"

[tool.taskipy.tasks.req_brief]
cmd = "poetry export --only main --without-hashes | grep -f <(poetry show --only main --tree | grep -E '^[a-zA-Z0-9]' | awk '{print $1}') > requirements-brief.txt"
help = "Generates brief requirements.txt (top-level packages only)"

[tool.taskipy.tasks.req_colab]
cmd = "poetry export --only main --without-hashes | grep -f <(poetry show --only main --tree | grep -E '^[a-zA-Z0-9]' | awk '{print $1}') | grep -v -E '^ipython|^ipykernel' > requirements-colab.txt"
help = "Generates brief requirements for Colab (skips ipython)"

[tool.taskipy.tasks.reqs]
cmd = "task req_full && task req_brief"
help = "Builds standard requirements (full + brief)"

[tool.taskipy.tasks.reqs_all]
cmd = "task req_full && task req_brief && task req_colab"
help = "Builds ALL requirements (full + brief + colab)"

[tool.taskipy.tasks.kernel]
cmd = "PROJECT_NAME=$(poetry version | awk '{print $1}'); poetry run python -m ipykernel install --user --name \"$PROJECT_NAME\" --display-name \"Python ($PROJECT_NAME)\""
help = "Registers the Poetry environment as a Jupyter kernel with the project's name."

#FUTURE
#lint = "poetry run ruff check ."
#format = "poetry run ruff format ."
#types = "poetry run mypy ."
#test = "poetry run pytest"
#all_checks = "task lint && task types && task test"