[tool.poetry]
name = "conversational-analytics-api"
version = "0.1.0"
description = "An overview of using the Conversational Analytics API."
authors = ["Mike Henderson <statmike@gmail.com>"]
readme = "readme.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-geminidataanalytics = ">=0.3.0,<0.4.0"
ipykernel = ">=6.30.1,<7.0.0"
pandas = ">=2.3.2,<3.0.0"
altair = ">=5.5.0,<6.0.0"
ipython = ">=9.5.0,<10.0.0"
google-auth = "^2.40.3"
