[project]
name = "image-to-graph"
version = "0.1.0"
description = "An ADK agent that converts complex diagram images into structured graph representations (nodes + edges + attributes)."
readme = "readme.md"
requires-python = ">=3.13.3"
dependencies = [
    "google-adk>=1.14.0",
    "google-genai>=1.64.0",
    "pydantic>=2.12.5",
    "pillow>=11.2.1",
    "python-dotenv>=1.0.0",
]
