[tool.poetry]
name = "travel-planner"
description = "An ADK exmple with multiple agents and using A2A for intra-agent communication."
authors = ["Kartic Narayanan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
a2a-sdk = "^0.3.5"
google-genai = "^1.33.0"
google-cloud-aiplatform = "^1.111.0"
python-dotenv = "^1.1.1"
uvicorn = "^0.35.0"
mcp = "^1.13.1"
google-adk = "^1.13.0"
toolbox-core = "^0.5.0"
