[tool.poetry]
name = "travel-planner"
description = "An ADK exmple with multiple agents and using A2A for intra-agent communication."
authors = ["Kartic Narayanan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
a2a-sdk = "^0.3.5"
google-genai = "^1.33.0"
google-cloud-aiplatform = "^1.111.0"
python-dotenv = "^1.1.1"
uvicorn = "^0.35.0"
mcp = "^1.13.1"
google-adk = "^1.13.0"
toolbox-core = "^0.5.0"

################################# DEVELOPMENT FOCUSED CONTENT #################################

[tool.poetry.group.dev]
optional = true
# use poetry install --with dev to include these:

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[tool.taskipy.tasks]
req_full = {cmd="poetry export -f requirements.txt --output requirements.txt --without-hashes", help="Generates full requirements.txt (from poetry.lock)"}
req_brief = {cmd="poetry show --only main --tree | grep -E '^[a-zA-Z0-9]' | awk '{print $1 \"==\" $2}' > requirements-brief.txt", help="Generates brief requirements.txt (top-level packages only)"}
req_colab = {cmd="poetry show --only main --tree | grep -E '^[a-zA-Z0-9]' | awk '{print $1 \"==\" $2}' | grep -v -E '^ipython|^ipykernel' > requirements-colab.txt", help="Generates brief requirements for Colab (skips ipython)"}
reqs = {cmd="task req_full && task req_brief", help="Builds standard requirements (full + brief)"}
reqs_all = {cmd="task req_full && task req_brief && task req_colab", help="Builds ALL requirements (full + brief + colab)"}

#FUTURE
#lint = "poetry run ruff check ."
#format = "poetry run ruff format ."
#types = "poetry run mypy ."
#test = "poetry run pytest"
#all_checks = "task lint && task types && task test"