[project]
name = "product-hierarchy"
version = "0.1.0"
description = "Product hierarchy example notebooks"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "google-cloud-bigquery",
    "dataproc-spark-connect",
    "db-dtypes",

    "scikit-learn",
    "pandas",
    "numpy",
    "pydantic",
    "keras",
    "tensorflow",
    "pip",
    "ipykernel",
]
